--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-
+title: GRC Engineering Study
+logo: /assets/img/grc-engineering-logo.png
+description: Site to Study and Document My GRC Engineering Learning
+show_downloads: false
