--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: GRC Engineering Study
 logo: /assets/img/grc-engineering-logo.png
-description: Site to Study and Document My GRC Engineering Learning
+description: Site to Document GRC and AWS Learning
 show_downloads: false
 theme: jekyll-theme-minimal
