--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: GRC Engineering Study
+title: GRC and AWS Security Study
 logo: /assets/img/grc-engineering-logo.png
 description: Site to Document GRC and AWS Learning
 show_downloads: false
